# megaserver

./: .gitignore  LINUXHANDOFF.md  README.md  SPEC.md  fozzy.toml
artifacts/: megaserver.daemon.signed.trace.production.fozzy  megaserver.daemon.tls.signed.trace.production.fozzy  megaserver.daemon.tls.trace.production.fozzy  megaserver.daemon.trace.current.fozzy  megaserver.daemon.trace.production.fozzy  megaserver.lifecycle.trace.1.fozzy  megaserver.lifecycle.trace.current.1.fozzy  megaserver.lifecycle.trace.current.fozzy  megaserver.lifecycle.trace.fozzy  megaserver.lifecycle.trace.min.fozzy  megaserver.lifecycle.trace.min.memory.delta.json  megaserver.lifecycle.trace.production.fozzy
examples/hello-service/: megaserver.yaml  server.py
include/: megaserver.abi.json  megaserver.artifacts.json  megaserver.h
rust/: Cargo.toml  build.rs
rust/src/: app.rs  cli.rs  controlplane.rs  daemon.rs  dns.rs  ffi.rs  host_abi.rs  http_host.rs  ingress.rs  lib.rs  main.rs  manifest.rs  model.rs  network.rs  planner.rs  projects.rs  proxy.rs  runtime.rs  sandbox.rs  state.rs  test_support.rs  tls.rs
src/: main.fzy
src/api/: ffi.fzy  mod.fzy  rpc.fzy
src/cli/: commands.fzy
src/fzweb/: mod.fzy
src/model/: contracts.fzy  control.fzy  mod.fzy  planner.fzy  request.fzy  response.fzy  types.fzy
src/runtime/: mod.fzy
tests/: INIT_GUIDE.md  distributed.pass.fozzy.json  host.pass.fozzy.json  megaserver.controlplane.pass.fozzy.json  megaserver.daemon.pass.fozzy.json  megaserver.daemon.tls.pass.fozzy.json  megaserver.lifecycle.pass.fozzy.json  memory.pass.fozzy.json
(+11 files in other folders)
