[package]
name = "megaserver"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "query", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
ipnet = "2.11"
nix = { version = "0.29", features = ["signal", "process", "sched", "mount", "hostname"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "net"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
ureq = "2.10"
url = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"

[build-dependencies]

[dev-dependencies]
rcgen = "0.13"
tempfile = "3.12"
